fix(rjk): update component styles for improved aesthetics and consistency

--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -12,9 +12,9 @@
         {{ apartmentData.propertyDetails.type || "Not Available" }}
       </div>
       <div class="d-flex gap-3 mt-4">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" [routerLink]="['PropertyMediaView']">
+        <button type="button" class="button button-primary" data-bs-toggle="modal" [routerLink]="['PropertyMediaView']">
           Floor media
-        </button>
+        </button> 
       </div>
     </div>
   </div>
