--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow-lg rounded overflow-hidden h-100">
+<div class="card shadow-lg rounded overflow-hidden min-w-96 h-100">
   <div class="card-img-top" style="height: 12rem; overflow: hidden;">
     <img [src]="product.propertyDetails.thumbnail" class="w-100 h-100 object-fit-cover" alt="">
   </div>
