--- a/property-rental-main-app/src/app/components/request-tourform/request-tourform.component.html
+++ b/property-rental-main-app/src/app/components/request-tourform/request-tourform.component.html
@@ -61,7 +61,7 @@
               </div>
             </div>
             <div class="d-grid">
-              <button type="submit" class="btn btn-primary" [disabled]="requestTourForm.invalid">Send Message</button>
+              <button type="submit" class="btn btn-success" [disabled]="requestTourForm.invalid">Send Message</button>
             </div>
             <div class="form-check mt-3">
               <input type="checkbox" value="Email me listings and apartments related info" formControlName="acceptTerms" class="form-check-input" id="acceptTerms" />
