--- a/property-rental-main-app/src/app/components/search/search.component.css
+++ b/property-rental-main-app/src/app/components/search/search.component.css
@@ -39,20 +39,20 @@
     padding: 12.5px 30px;
     border: 0;
     border-radius: 100px;
-    background-color: #2a2c30;
-    color: #ffffff;
+    background-color: #C5BAFF;
+    color: #000;
     font-weight: Bold;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
   }
   
   button:hover {
-    background-color: #f86d34;
+    background-color: #C4D9FF;
     transform: scale(1.05);
   }
   
   button:active {
-    background-color: #FFA41B;
+    background-color: #C4D9FF;
     transition: all 0.25s;
     -webkit-transition: all 0.25s;
     box-shadow: none;
