--- a/property-rental-main-app/src/app/components/send-message/send-message.component.html
+++ b/property-rental-main-app/src/app/components/send-message/send-message.component.html
@@ -89,7 +89,7 @@
             <div class="d-grid">
               <button 
                 type="submit" 
-                class="btn btn-primary" 
+                class="btn btn-success" 
                 [disabled]="sendMessage.invalid" 
                 (click)="onSubmit();sendEmail();reset()">
                 Send Message
