--- a/property-rental-main-app/src/app/components/login/login.component.html
+++ b/property-rental-main-app/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="col-lg-6 mb-5 lg:mb-0">
           <h1 class="my-5 text-4xl font-bold leading-tight">
             Easy rentals, <br />
-            <span class="text-orange-500">trusted connections.</span>
+            <span class="text-purple-300">trusted connections.</span>
           </h1>
           <p class="text-gray-600 leading-relaxed">
             Our property rental system makes renting simple and hassle-free.
