--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -7,7 +7,7 @@
         <div class="col-lg-6 mb-5 lg:mb-0">
           <h1 class="my-5 text-4xl font-bold leading-tight">
             Rent smarter, <br />
-            <span class="text-orange-500">live better..</span>
+            <span class="text-purple-300">live better..</span>
           </h1>
           <p class="text-gray-600 leading-relaxed">
             Our property rental system is designed to make renting easy, fast, and secure.
