--- a/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
@@ -7,12 +7,19 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li *ngFor="let nav of navbarData">
-          <a [routerLink]="nav.routerLink">{{ nav.title }}</a>
-        </li>
+        <li><a routerLink="/FindProperty">Find Property</a></li>
+        <li><a routerLink="/addproperty">Add Property</a></li>
+        <li><a routerLink="/dashboard">Dashboard</a></li>
+        <li><a routerLink="/contactus">Contact Us</a></li>
+    
+        <!-- Show Sign Up and Log In only when the user is NOT logged in -->
+        <li ><a routerLink="/signup">Sign Up</a></li>
+        <li ><a routerLink="/login">Log In</a></li>
+    
+        <!-- Show Logout button only when the user is logged in -->
+        <button  type="button" (click)="logout()">Logout</button>
       </ul>
     </nav>
-
-
+    
   </div>
 </header>
