refactor: update navbar component for better readability and consistency; modify review and earnings components to use 'tenant' instead of 'user' and change currency format to INR

--- a/property-rental-main-app/src/app/components/add-property/add-property.component.html
+++ b/property-rental-main-app/src/app/components/add-property/add-property.component.html
@@ -52,23 +52,22 @@
         <div formGroupName="propertyDetails">
           <div formGroupName="contactUs">
             <div class="mt-3">
-             
+
               <label for="phone" class="block text-lg pl-4">Phone number :</label>
               <input type="tel" formControlName="phone" id="phone" name="phone" pattern="^[7-9]{1}[0-9]{9}$"
-                placeholder="9123456789" class="ml-4 pl-2 mt-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md"
-                 />
+                placeholder="9123456789" class="ml-4 pl-2 mt-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
             </div>
             <div class="pt-4">
               <label for="email" class="block text-lg pl-4">Email Address :</label>
               <input type="email" id="email" formControlName="email" placeholder="abc123@gmail.com" pattern="" size="30"
-                 class="ml-4 pl-2 mt-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
+                class="ml-4 pl-2 mt-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
             </div>
           </div>
-  
+
           <div formGroupName="officeHours" class="ml-4 mt-4">
             <label>Your Availableness :</label>
             <div>
-      
+
               <label for="contact at">Available time :</label>
               <select formControlName="time" name="" id="time"
                 class="mt-2 ml-5 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md">
@@ -125,13 +124,13 @@
               </div>
               <div class="mt-2">
                 <label for="aptNumber" class="block">Apartment Number :</label>
-                <input type="text" name="aptNumber" formControlName="aptNumber" 
+                <input type="text" name="aptNumber" formControlName="aptNumber"
                   class="mt-2 w-40 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
               </div>
 
               <div class="mt-2">
                 <label for="zipCode" class="block">zipcode :</label>
-                <input type="text" id="zipCode" formControlName="zipCode" name="" 
+                <input type="text" id="zipCode" formControlName="zipCode" name=""
                   class="mt-2 w-32 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
               </div>
             </div>
@@ -168,49 +167,49 @@
               </div>
             </div>
           </div>
-   
-          
+
+
           <div class="mt-3 flex">
             <div class="ml-4 mt-2">
               <label for="area" class="block">Area :</label>
-              <input type="text" id="area" formControlName="area" name=""  placeholder="ex:5000 sq ft"
+              <input type="text" id="area" formControlName="area" name="" placeholder="ex:5000 sq ft"
                 class="pl-2 mt-2 w-32 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
             </div>
             <div class="mt-2 ml-48">
               <label for="size" class="block">Apartment Size :</label>
-              <input type="text" name="size" formControlName="size"  placeholder="ex: Studio - 2 Beds "
+              <input type="text" name="size" formControlName="size" placeholder="ex: Studio - 2 Beds "
                 class="pl-2 mt-2 w-52 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
             </div>
           </div>
-          <!-- <div class="mt-4 ml-4">
+          <div class="mt-4 ml-4">
             <label for="thumbnail" class="block">Thumbnail:</label>
             <input id="thumbnail" formControlName="thumbnail" placeholder="upload thumbnail"
               class="ml-2 pl-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
-          </div> -->
+          </div>
           <div class="ml-4 mt-6 flex gap-3">
             <label for="type" class="block">Appartment Type :</label>
-            <input type="radio" id="Appartment1" formControlName="type" name="type" value="Residential Apartment"
-               /><label>Residential Apartment</label>
-            <input type="radio" id="Appartment2" formControlName="type" name="type" value="Residential Land"
-               /><label>Residential Land</label>
-            <input type="radio" id="Appartment3" formControlName="type" name="type" value="Studio Apartment"
-               /><label> Studio Apartment</label>
-            <input type="radio" id="Appartment4" formControlName="type" name="type" value="Penthouses"
-               /><label> Penthouses</label>
-            <input type="radio" id="Appartment5" formControlName="type" name="type" value="Luxury Apartment"
-               /><label> Luxury Apartment</label>
+            <input type="radio" id="Appartment1" formControlName="type" name="type"
+              value="Residential Apartment" /><label>Residential Apartment</label>
+            <input type="radio" id="Appartment2" formControlName="type" name="type"
+              value="Residential Land" /><label>Residential Land</label>
+            <input type="radio" id="Appartment3" formControlName="type" name="type" value="Studio Apartment" /><label>
+              Studio Apartment</label>
+            <input type="radio" id="Appartment4" formControlName="type" name="type" value="Penthouses" /><label>
+              Penthouses</label>
+            <input type="radio" id="Appartment5" formControlName="type" name="type" value="Luxury Apartment" /><label>
+              Luxury Apartment</label>
           </div>
 
           <div class="ml-4 mt-3 flex gap-2">
             <label for="parking" class="block">Parking :</label>
-            <input type="radio" id="parking1" formControlName="parking" name="parking" value="2 wheeler"
-               /><label>2 wheeler</label>
-            <input type="radio" id="parking2" formControlName="parking" name="parking" value="4 wheeler"
-               /><label>4 wheeler</label>
-            <input type="radio" id="parking3" formControlName="parking" name="parking" value="Not allowed"
-               /><label>Not allowed</label>
+            <input type="radio" id="parking1" formControlName="parking" name="parking" value="2 wheeler" /><label>2
+              wheeler</label>
+            <input type="radio" id="parking2" formControlName="parking" name="parking" value="4 wheeler" /><label>4
+              wheeler</label>
+            <input type="radio" id="parking3" formControlName="parking" name="parking" value="Not allowed" /><label>Not
+              allowed</label>
           </div>
- 
+
           <div formArrayName="amenities" class="ml-4 mt-3">
             <label class="block"> Appartment Amenities :</label>
             <div class="flex flex-wrap mt-2">
@@ -240,7 +239,7 @@
       </div>
 
       <div class="ml-4 mt-3 tab-pane fade" id="About-property" role="tabpanel" aria-labelledby="AboutProperty-tab">
-  
+
         <div formGroupName="aboutUs" class="ml-4">
           <div class="">
             <label class="block"> About Property :</label>
@@ -255,7 +254,7 @@
               class="mt-2 pl-3 w-[30vw] h-20 bg-[#E2DFD2] rounded-md shadow-md"></textarea>
           </div>
         </div>
-   
+
 
         <div formGroupName="apartmentFeatures" class="ml-4 mt-4">
           <div formArrayName="features">
@@ -292,20 +291,20 @@
           </div>
         </div>
 
- 
+
         <div formGroupName="education" class="mt-2 ml-4">
           <div formArrayName="details">
             <div *ngFor="let detail of educationDetails.controls; let i = index" [formGroupName]="i">
               <div class="flex gap-14">
                 <div>
                   <label class="block">School's name :</label>
-                  <input type="text" formControlName="name" id="name" placeholder="School nearby.. " 
+                  <input type="text" formControlName="name" id="name" placeholder="School nearby.. "
                     class="pl-1 pt-1 mt-2 h-8 bg-[#e2dfd2] rounded-md shadow-md" />
                 </div>
 
                 <div>
                   <label class="block">School Adress:</label>
-                  <textarea formControlName="address" id="adress"  placeholder="....Address of school..."
+                  <textarea formControlName="address" id="adress" placeholder="....Address of school..."
                     class="mt-2 pl-3 pt-1 w-96 h-8 bg-[#E2DFD2] rounded-md shadow-md"></textarea>
                 </div>
               </div>
@@ -317,7 +316,7 @@
                 </div>
                 <div>
                   <label class="block">School Type :</label>
-                  <select name="type" id="type" formControlName="type" 
+                  <select name="type" id="type" formControlName="type"
                     class="mt-2 pl-3 pt-1 w-70 h-8 bg-[#E2DFD2] rounded-md shadow-md">
                     <option value="">select school type</option>
                     <option value="Public High School">
@@ -352,14 +351,14 @@
             </div>
           </div>
         </div>
- 
+
         <div formGroupName="hospital" class="ml-4 mt-2">
           <div formArrayName="details">
             <div *ngFor="let details of hospitalDetails.controls; let i = index" [formGroupName]="i">
               <div class="flex gap-14">
                 <div>
                   <label class="block">Hospital name :</label>
-                  <input type="text" formControlName="name" id="name" placeholder="hospital nearby.. " 
+                  <input type="text" formControlName="name" id="name" placeholder="hospital nearby.. "
                     class="mt-2 pl-1 pt-1 h-8 bg-[#e2dfd2] rounded-md shadow-md" />
                 </div>
                 <div>
@@ -376,7 +375,7 @@
                 </div>
                 <div>
                   <label class="block">Hospital Type :</label>
-                  <select name="type" id="type" formControlName="type" 
+                  <select name="type" id="type" formControlName="type"
                     class="mt-2 pl-3 pt-1 w-70 h-8 bg-[#E2DFD2] rounded-md shadow-md">
                     <option value="">select hospital type</option>
                     <option value="Private Hospital">Private Hospital</option>
@@ -407,14 +406,14 @@
             </div>
           </div>
         </div>
- 
+
         <div formGroupName="transportation" class="mt-2 ml-4">
           <div formArrayName="details">
             <div *ngFor="let transport of transportDetails.controls; let i = index" [formGroupName]="i">
               <div class="flex gap-14">
                 <div>
                   <label class="block">Transport name :</label>
-                  <input type="text" formControlName="name" id="name" placeholder="Transport nearby.. " 
+                  <input type="text" formControlName="name" id="name" placeholder="Transport nearby.. "
                     class="mt-2 pl-1 pt-1 h-8 bg-[#e2dfd2] rounded-md shadow-md" />
                 </div>
                 <div>
@@ -431,7 +430,7 @@
                 </div>
                 <div>
                   <label class="block">Transport's Type :</label>
-                  <select name="type" id="type" formControlName="type" 
+                  <select name="type" id="type" formControlName="type"
                     class="mt-2 pl-3 pt-1 w-70 h-8 bg-[#E2DFD2] rounded-md shadow-md">
                     <option value="">select transport type</option>
                     <option value="BUS Station">BUS Station</option>
@@ -462,7 +461,7 @@
           </div>
         </div>
       </div>
- 
+
       <div class="ml-4 mt-3 mb-4 tab-pane fade" id="Units" role="tabpanel" aria-labelledby="Units-tab">
         <div formGroupName="availableUnits">
           <div formArrayName="rows">
@@ -470,12 +469,12 @@
               <div class="flex gap-5">
                 <div>
                   <label for="unit" class="block">Unit No:</label>
-                  <input type="text" id="unit" formControlName="unit"  placeholder="unit"
+                  <input type="text" id="unit" formControlName="unit" placeholder="unit"
                     class="mt-2 pl-2 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
                 </div>
                 <div>
                   <label for="price" class="block">Price:</label>
-                  <input type="text" id="price" formControlName="price"  placeholder="ex:500000"
+                  <input type="text" id="price" formControlName="price" placeholder="ex:500000"
                     class="mt-2 pl-2 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
                 </div>
                 <div>
@@ -496,7 +495,7 @@
               </div>
               <div class="mt-3">
                 <label for="availableFrom" class="block">Available From:</label>
-                <input type="date" id="availableFrom" formControlName="availableFrom" 
+                <input type="date" id="availableFrom" formControlName="availableFrom"
                   class="mt-2 h-10 pl-2 bg-[#E2DFD2] rounded-md shadow-md" />
               </div>
               <div formArrayName="highlights" class="mt-3">
@@ -526,18 +525,18 @@
 
               <div class="mt-3 flex gap-2">
                 <label for="furnishing" class="block">Furnishing Type:</label>
-                
+
                 <input type="radio" formControlName="furnishing" value="Semi Furnish" id="furnishing1">
                 <label for="furnishing1">Semi Furnish</label>
-              
+
                 <input type="radio" formControlName="furnishing" value="Fully Furnish" id="furnishing2">
                 <label for="furnishing2">Fully Furnish</label>
-              
+
                 <input type="radio" formControlName="furnishing" value="Unfurnished" id="furnishing3">
                 <label for="furnishing3">Unfurnished</label>
               </div>
-              
-              
+
+
               <div class="flex gap-[80vh]">
                 <div *ngIf="i === availableUnits.length - 1">
                   <button type="button" (click)="addHighlights()">
@@ -555,103 +554,55 @@
           </div>
         </div>
       </div>
-  
-      <!-- <div class="tab-pane fade" id="Images" role="tabpanel" aria-labelledby="Images-tab">
 
-          <div formArrayName="imgGallery">
-            <div *ngFor="let gallery of imageGalleryFormArray.controls; let i = index" [formGroupName]="i" class="gallery-section">
-      
-        
-              <div formArrayName="images">
-                <div *ngFor="let image of getImagesFormArray(i).controls; let j = index" [formGroupName]="j" class="image-group">
-                  
-                  <div class="form-row">
-                    <label>Image URL:</label>
-                    <input type="text" formControlName="url" placeholder="Enter Image URL" />
-                  </div>
-        
-                  <div class="form-row">
-                    <label>Alt Text:</label>
-                    <input type="text" formControlName="alt" placeholder="Enter Alt Text" />
-                  </div>
-        
-                  <button type="button" (click)="removeImage(i, j)" id="removelast" *ngIf="getImagesFormArray(i).length > 1">Remove Image</button>
-                </div>
-              </div>
-        
-              <button type="button" (click)="addImage(i)" id="add">Add Image</button>
-        
-            </div>
-          </div>
-        <div class="text-center mt-3">
-          <button type="submit" class="mt-3">Submit</button>
-        </div>
-      </div> -->
       <div class="tab-pane fade" id="Images" role="tabpanel" aria-labelledby="Images-tab">
 
-        <select>
-          <option value="Thumbnail">Thumbnail</option>
-          <option value="ImageGallery">ImageGallery</option>
-          <option value="Photos">Photos</option>
-          <option value="floorPlan">floorPlan</option>
-        </select>
-        <div formGroupName="propertyDetails">
-          <div class="mt-4 ml-4">
-            <label for="thumbnail" class="block">Thumbnail:</label>
-            <input type="file" id="thumbnail" formControlName="thumbnail" placeholder="upload thumbnail"
-              class="ml-2 pl-2 border-2 w-64 h-8 bg-[#E2DFD2] rounded-md shadow-md" />
-          </div>
-        </div>
-        
-       
+
         <div formArrayName="imgGallery" class="gallery-container">
-      
-          <div *ngFor="let gallery of imageGalleryFormArray.controls; let i = index" 
-               [formGroupName]="i" 
-               class="gallery-section border rounded p-3 mb-4 shadow-sm">
-      
+
+          <div *ngFor="let gallery of imageGalleryFormArray.controls; let i = index" [formGroupName]="i"
+            class="gallery-section border rounded p-3 mb-4 shadow-sm">
+
             <h5 class="text-primary mb-3">Gallery {{ i + 1 }}</h5>
-      
+
             <div formArrayName="images">
-              <div *ngFor="let image of getImagesFormArray(i).controls; let j = index" 
-                   [formGroupName]="j" 
-                   class="image-group mb-3 p-3 border rounded bg-light">
-      
+              <div *ngFor="let image of getImagesFormArray(i).controls; let j = index" [formGroupName]="j"
+                class="image-group mb-3 p-3 border rounded bg-light">
+
                 <div class="form-row mb-2">
                   <label class="form-label">Image URL:</label>
                   <input type="file" class="form-control" formControlName="url" placeholder="Enter Image URL" />
                 </div>
-      
+
                 <div class="form-row mb-2">
                   <label class="form-label">Alt Text:</label>
                   <input type="text" class="form-control" formControlName="alt" placeholder="Enter Alt Text" />
                 </div>
-      
+
                 <div class="text-end">
-                  <button type="button" class="btn btn-sm btn-danger" 
-                          (click)="removeImage(i, j)" 
-                          *ngIf="getImagesFormArray(i).length > 1">
+                  <button type="button" class="btn btn-sm btn-danger" (click)="removeImage(i, j)"
+                    *ngIf="getImagesFormArray(i).length > 1">
                     Remove Image
                   </button>
                 </div>
               </div>
             </div>
-      
+
             <div class="text-center mt-3">
               <button type="button" class="btn btn-sm btn-primary" (click)="addImage(i)">
                 + Add Image
               </button>
             </div>
-      
+
           </div>
         </div>
-      
+
         <div class="text-center mt-4">
           <button type="submit" class="btn btn-success">Add property</button>
         </div>
-      
+
       </div>
-      
+
     </div>
   </div>
 </form>
