--- a/property-rental-main-app/src/app/page/dashboard/sections/reviews/reviews.component.html
+++ b/property-rental-main-app/src/app/page/dashboard/sections/reviews/reviews.component.html
@@ -26,7 +26,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let review of reviews" class="border">
-        <td class="p-2">{{ review.user }}</td>
+        <td class="p-2">{{ review.tenant }}</td>
         <td class="p-2">{{ review.property }}</td>
         <td class="p-2 text-yellow-500">{{ review.rating }} ⭐</td>
         <td class="p-2">{{ review.feedback }}</td>
