--- a/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
+++ b/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
@@ -9,9 +9,9 @@
                     <p class="text-muted small text-truncate">{{ data.address|| "Not Available"}}</p>
                     <p class="text-muted small">{{ data.distance || "Not Available"}}</p>
                 </div>
-                <div class="bg-light d-flex align-items-center justify-content-center p-3" style="width: 33%;">
+                <div class="bg-light d-flex align-items-center justify-content-center p-3" >
                     <div class="text-center">
-                        <h1 class="display-4 fw-bold" style="color: #C5BAFF;">{{ data.rating || "Not Available"}}</h1>
+                        <h1 class="display-4 fw-bold text-[#C5BAFF]">{{ data.rating || "Not Available"}}</h1>
                         <span class="text-muted small">Out of 10</span>
                     </div>
                 </div>
