--- a/property-rental-main-app/src/app/page/dashboard/sections/properties/properties.component.html
+++ b/property-rental-main-app/src/app/page/dashboard/sections/properties/properties.component.html
@@ -1,23 +1,33 @@
-  <h3 class="text-xl font-semibold mb-4">Your Properties</h3>
-          <table class="table table-striped bg-white shadow rounded-lg">
-              <thead class="bg-gray-200">
-                  <tr>
-                      <th>Property Name</th>
-                      <th>Location</th>
-                      <th>Property Type</th>
-                      <th>Status</th>
-                      <th>Actions</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr *ngFor="let property of properties">
-                    <td>{{ property.propertyDetails.name }}</td>
-                    <td>{{ property.propertyDetails.address.address1 }}</td>
-                    <td>{{ property.propertyDetails.type }}</td>
-                      <td><span class="badge bg-success">Available</span></td>
-                      <td>
-                          <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
-              </tbody>
-          </table>
+<h3 class="text-xl font-semibold mb-4">Your Properties</h3>
+<table class="table table-striped bg-white shadow rounded-lg">
+    <thead class="bg-gray-200">
+        <tr>
+            <th>Property Name</th>
+            <th>Location</th>
+            <th>Property Type</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Loader centered in the table -->
+        <tr *ngIf="loader">
+            <td colspan="5" class="text-center">
+                <div class="flex justify-center items-center h-32">
+                    <app-loder></app-loder>
+                </div>
+            </td>
+        </tr>
+        
+        <!-- Property list -->
+        <tr *ngFor="let property of properties">
+            <td>{{ property.propertyDetails.name }}</td>
+            <td>{{ property.propertyDetails.address.address1 }}</td>
+            <td>{{ property.propertyDetails.type }}</td>
+            <td><span class="badge bg-success">Available</span></td>
+            <td>
+                <button class="btn btn-sm btn-danger">Delete</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
