--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -67,10 +67,8 @@
       <ng-container>
         <!-- Loader -->
         <div class="d-flex justify-content-center align-items-center" *ngIf="loader" style="height: 40vh;">
-          <div class="spinner-border" role="status">
-            <span class="visually-hidden">Loading...</span>
+           <app-loder></app-loder>
           </div>
-        </div>
 
         <!-- No Data Found -->
         <div class="d-flex justify-content-center align-items-center text-center"
