--- a/property-rental-main-app/src/app/app.component.html
+++ b/property-rental-main-app/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div class="row">
     <app-nav-bar></app-nav-bar>
 </div>
+
+<!-- Custom Alert Component (Global) -->
+<app-alert></app-alert>
+
 <div class="row">
     <router-outlet></router-outlet>
 </div>
+
 <div class="row">
     <app-footer></app-footer>
 </div>
