--- a/property-rental-main-app/src/app/home/home/home.component.html
+++ b/property-rental-main-app/src/app/home/home/home.component.html
@@ -5,7 +5,10 @@
     style="background-image: url('assets/images/home-main.jpg'); background-blend-mode: overlay; background-color: rgba(0, 0, 0, 0.2);">
     <div class="container mx-auto text-center px-4">
       <h1 class="text-white text-4xl md:text-6xl font-extrabold mb-6 drop-shadow-md">
-        Find Your Perfect Place
+        Find your perfect rental
+      </h1>
+      <h1 class="text-white text-4xl md:text-6xl font-extrabold mb-6 drop-shadow-md">
+        easy, fast, and hassle-free!
       </h1>
       <div class="flex justify-center mt-4">
         <app-search></app-search>
