--- a/property-rental-main-app/src/styles.css
+++ b/property-rental-main-app/src/styles.css
@@ -1,16 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 *{
     padding: 0;
     margin: 0;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
 }
 body {
     background: #F8FAFC;
-    /* D9EAFD
-    BCCCDC
-    9AA6B2 */
+
     color: black;
     overflow-y: scroll;
     overflow-x: hidden;
