fix(rjk): fix coustom alerts

--- a/property-rental-main-app/src/app/components/add-property/add-property.component.html
+++ b/property-rental-main-app/src/app/components/add-property/add-property.component.html
@@ -541,7 +541,7 @@
 
                 <div class="form-row mb-2">
                   <label class="form-label">Image URL:</label>
-                  <input type="file" class="form-control" formControlName="url" placeholder="Enter Image URL" />
+                  <input type="text" class="form-control" formControlName="url" placeholder="Enter Image URL" />
                 </div>
 
                 <div class="form-row mb-2">
