--- a/property-rental-main-app/src/app/page/dashboard/sections/properties/properties.component.html
+++ b/property-rental-main-app/src/app/page/dashboard/sections/properties/properties.component.html
@@ -26,7 +26,7 @@
             <td>{{ property.propertyDetails.type }}</td>
             <td><span class="badge bg-success">Available</span></td>
             <td>
-                <button class="btn btn-sm btn-danger">Delete</button>
+                <button (click)="deleteProperty(property.id)" class="btn btn-sm btn-danger">Delete</button>
             </td>
         </tr>
     </tbody>
