--- a/property-rental-main-app/src/app/contact-us/contact-us/contact-us.component.html
+++ b/property-rental-main-app/src/app/contact-us/contact-us/contact-us.component.html
@@ -41,11 +41,11 @@
                   <h2>One account</h2>
                   <h2>Many possibilities</h2>
                 </div>
-                <form>
+                <form formGroup="contactForm" (ngSubmit)="onSubmit()">
                   <section class="form">
                     <div class="form-group">
                       <label for="firstName">First Name</label>
-                      <input type="text" id="text" class="form-control" formControlName="firstName"
+                      <input type="text" id="text" class="form-control" formControlName="name"
                         placeholder="Enter your First Name" />
                     </div>
 
@@ -66,7 +66,7 @@
                     </div>
                     <div class="form-group">
                       <label for="help">How can i help you</label>
-                      <textarea type="" id="help" class="form-control" formControlName="help"> </textarea> 
+                      <textarea type="" id="help" class="form-control" formControlName="message"> </textarea> 
                     </div>
                   </section>
                   <section class="buttons">
